# ttedit

./: CMakeLists.txt  README.md  TODO.md
include/: color_schemes.h  command_buffer.h  cursor.h  edit_mode.h  line.h  line_array.h  screen_buffer.h  window.h
src/: CMakeLists.txt  command_buffer.c  cursor.c  edit_mode.c  line.c  line_array.c  main.c  screen_buffer.c  window.c
